Sat Dec 11 09:53:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Task.cpp:
          Minor borland fix

Fri Dec 10 18:40:29 2004  Steve Huston  <shuston@riverace.com>

	* tests/Reactor_Exceptions_Test.cpp: Force the ACE_SOCK_Dgram to all
	  its work with IPv4. Allows this test to run clean on IPv6 systems
	  as well as IPv4.

Fri Dec 10 23:06:24 UTC 2004  Don Hinton  <don.hinton@vanderbilt.edu>

        * Kokyu/tests/DSRT_MIF/MIF.cpp:
          Changed barrier to bar because barrier() is a macro.

Fri Dec 10 12:13:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Logging_Strategy.cpp:
          Changed the setting of the ostream on the log_msg. Only at the
          moment the logging strategy has created a new ostream, then we
          pass 1, to indicate that the log_msg must delete the ostream.
          This fixes the crash of this test on all windows platforms.

Fri Dec 10 11:15:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/templates/gnu.mpd:
          Removed usage of taoconfig.mk, we have zapped this in the idea
          that it was not used. All the things this file set are already
          handled by MPC

Fri Dec 10 09:52:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Strategies_T.{h,cpp,inl}:
          Made ACE_DLL_Strategy usable in unicode builds. Thanks to
          Thomas Girard <thomas dot g dot girard at free dot fr>
          for reporting this. This fixed bugzilla [2005]

Fri Dec 10 08:55:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ACE-INSTALL.html:
          Added description about Interix (Windows Services for Unix).
          Thanks to Steven Frare <stevefr at avaya dot com> for adding
          this.

Thu Dec  9 14:04:12 2004  Steve Huston  <shuston@riverace.com>

	* ACE-INSTALL.html: Clarified that there is no leading '#' character
	  for the 'include' statement in platform_macros.GNU. Thanks to