@@ -1934,6 +1934,7 @@ Adam Howell <adam dot s dot howell at lmco dot com>
 Steven Frare <stevefr at avaya dot com>
 Dave Dalapati <dalapati at comcast dot net>
 Arjun Thounaojam <arjun dot thounaojam at wipro dot com>
+Michael Altmann <michael dot altmann dot extern at mchh dot siemens dot de>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
